# spielbrett

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  buf.gen.yaml  go.mod  go.sum  go.work  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
InstanceHost/: Board.cpp  Board.h  CMakeLists.txt  GRPCServer.cpp  GRPCServer.h  Instance.cpp  Instance.h  InstanceHost.cpp  InstanceHost.h  Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  OpenSpielGame.cpp  OpenSpielGame.h  PyGameClass.h  WebsocketServer.cpp  WebsocketServer.h  main.cpp
InstanceHost/Objects/: Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  Primitive.h
InstanceHost/Runtime/: IObject.h  IRuntime.h
InstanceHost/Runtime/Python/: Decorators.cpp  Decorators.h  ExternalClass.cpp  ExternalClass.h  Module.cpp  Object.cpp  Object.h  ObjectBindings.cpp  Runtime.cpp  Runtime.h
api/: README.md  buf.gen.yaml  go.mod  go.sum
api/proto/services/user/: user.proto
cmd/api/: api.go
cmd/spielbrett/: spielbrett.go
cpp/: .gitignore  README.md
cpp/src/InstanceHost/: Board.h  CMakeLists.txt  GRPCServer.h  Instance.cpp  InstanceHost.h  OpenSpielGame.cpp  OpenSpielGame.h  PyGameClass.cpp  PyGameClass.h
go/: README.md  go.mod
go/cmd/api/: api.go
go/internal/app/: app.go
go/internal/grpc/instance/: instance.go
go/internal/telegram/: bot.go  markup.go  start.go
internal/app/: app.go
internal/app/instance/: instance.go
internal/app/user/: user.go
internal/grpc/instance/: instance.go
internal/grpc/user/: user.go
internal/storage/mongo/: mongo.go
internal/telegram/: bot.go  callback.go  create.go  start.go
internal/types/instance/: instance.go
internal/types/user/: auth.go  integration.go  session.go  user.go
internal/web/: app.go
proto/: instance.proto  instance_host.proto  user.proto
proto/instance_host/: messages.proto  service.proto
proto/services/instance/: instance.proto
proto/services/instance_host/: instance_host.proto
proto/services/user/: user.proto
public/: index.html
src/: App.svelte
src/InstanceHost/: Board.cpp  Board.h  CMakeLists.txt  GRPCServer.cpp  GRPCServer.h  GRPCServerImpl.cpp  GRPCServerImpl.h  Instance.cpp  Instance.h  InstanceHost.cpp  InstanceHost.h  WebsocketServer.cpp  WebsocketServer.h  main.cpp
src/InstanceHost/BoardObjects/: Object.h
web/: index.html
web/src/: App.svelte  main.ts
web/src/components/: ActionEntry.svelte  Board.svelte  ConnectionSettings.svelte  ConnectionStatus.svelte
web/src/lib/: connection.svelte.ts
